dmaengine: idxd: move interrupt handle assignment (jsc#PED-682).

--- a/series.conf
+++ b/series.conf
@@ -9142,6 +9142,7 @@
 	patches.suse/vdpa-clean-up-get_config_size-ret-value-handling.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
+	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
 	patches.suse/Documentation-dmaengine-Correctly-describe-dmatest-w.patch
 	patches.suse/dmaengine-idxd-set-defaults-for-wq-configs.patch
 	patches.suse/dmaengine-uniphier-xdmac-Fix-type-of-address-variabl.patch
