dmaengine: idxd: create locked version of idxd_quiesce() call (jsc#PED-682).

--- a/series.conf
+++ b/series.conf
@@ -9144,6 +9144,7 @@
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
 	patches.suse/dmaengine-idxd-add-helper-for-per-interrupt-handle-d.patch
+	patches.suse/dmaengine-idxd-create-locked-version-of-idxd_quiesce.patch
 	patches.suse/Documentation-dmaengine-Correctly-describe-dmatest-w.patch
 	patches.suse/dmaengine-idxd-set-defaults-for-wq-configs.patch
 	patches.suse/dmaengine-uniphier-xdmac-Fix-type-of-address-variabl.patch
