--- a/series.conf
+++ b/series.conf
@@ -12613,6 +12613,7 @@
 	patches.suse/tracing-Fix-potential-double-free-in-create_var_ref.patch
 	patches.suse/tracing-Fix-return-value-of-trace_pid_write.patch
 	patches.suse/ftrace-Clean-up-hash-direct_functions-on-register-failures.patch
+	patches.suse/dmaengine-idxd-update-IAA-definitions-for-user-heade.patch
 	patches.suse/dmaengine-idxd-set-DMA_INTERRUPT-cap-bit.patch
 	patches.suse/dmaengine-idxd-Fix-the-error-handling-path-in-idxd_c.patch
 	patches.suse/dmaengine-zynqmp_dma-In-struct-zynqmp_dma_chan-fix-d.patch
