--- a/series.conf
+++ b/series.conf
@@ -9149,6 +9149,7 @@
 	patches.suse/dmaengine-idxd-handle-interrupt-handle-revoked-event.patch
 	patches.suse/Documentation-dmaengine-Correctly-describe-dmatest-w.patch
 	patches.suse/dmaengine-idxd-set-defaults-for-wq-configs.patch
+	patches.suse/dmaengine-idxd-add-knob-for-enqcmds-retries.patch
 	patches.suse/dmaengine-uniphier-xdmac-Fix-type-of-address-variabl.patch
 	patches.suse/dmaengine-idxd-fix-wq-settings-post-wq-disable.patch
 	patches.suse/dmaengine-at_xdmac-Don-t-start-transactions-at-tx_su.patch
