--- a/series.conf
+++ b/series.conf
@@ -9153,6 +9153,7 @@
 	patches.suse/dmaengine-uniphier-xdmac-Fix-type-of-address-variabl.patch
 	patches.suse/dmaengine-idxd-embed-irq_entry-in-idxd_wq-struct.patch
 	patches.suse/dmaengine-idxd-fix-descriptor-flushing-locking.patch
+	patches.suse/dmaengine-idxd-change-MSIX-allocation-based-on-per-w.patch
 	patches.suse/dmaengine-idxd-fix-wq-settings-post-wq-disable.patch
 	patches.suse/dmaengine-at_xdmac-Don-t-start-transactions-at-tx_su.patch
 	patches.suse/dmaengine-at_xdmac-Start-transfer-for-cyclic-channel.patch
