--- a/series.conf
+++ b/series.conf
@@ -11656,6 +11656,7 @@
 	patches.suse/dmaengine-imx-sdma-Fix-error-checking-in-sdma_event_.patch
 	patches.suse/dmaengine-mediatek-Fix-PM-usage-reference-leak-of-mt.patch
 	patches.suse/dmaengine-dw-edma-Fix-unaligned-64bit-access.patch
+	patches.suse/dmaengine-idxd-match-type-for-retries-var-in-idxd_en.patch
 	patches.suse/dmaengine-idxd-add-RO-check-for-wq-max_batch_size-wr.patch
 	patches.suse/dmaengine-idxd-add-RO-check-for-wq-max_transfer_size.patch
 	patches.suse/dmaengine-idxd-skip-clearing-device-context-when-dev.patch
