--- a/series.conf
+++ b/series.conf
@@ -10636,6 +10636,7 @@
 	patches.suse/TOMOYO-fix-__setup-handlers-return-values.patch
 	patches.suse/KVM-x86-mmu-Move-invalid-check-out-of-kvm_tdp_mmu_ge.patch
 	patches.suse/KVM-x86-mmu-Zap-_all_-roots-when-unmapping-gfn-range.patch
+	patches.suse/KVM-x86-hyper-v-Drop-redundant-ex-parameter-from-kvm-ipi.patch
 	patches.suse/KVM-x86-hyper-v-Drop-redundant-ex-parameter-from-kvm.patch
 	patches.suse/KVM-x86-hyper-v-Fix-the-maximum-number-of-sparse-ban.patch
 	patches.suse/KVM-x86-Fix-emulation-in-writing-cr8.patch
