KVM: x86: hyper-v: HVCALL_SEND_IPI_EX is an XMM fast hypercall (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10639,6 +10639,7 @@
 	patches.suse/KVM-x86-hyper-v-Drop-redundant-ex-parameter-from-kvm-ipi.patch
 	patches.suse/KVM-x86-hyper-v-Drop-redundant-ex-parameter-from-kvm.patch
 	patches.suse/KVM-x86-hyper-v-Fix-the-maximum-number-of-sparse-ban.patch
+	patches.suse/KVM-x86-hyper-v-HVCALL_SEND_IPI_EX-is-an-XMM-fast-hy.patch
 	patches.suse/KVM-x86-Fix-emulation-in-writing-cr8.patch
 	patches.suse/KVM-x86-emulator-Defer-not-present-segment-check-in-.patch
 	patches.suse/mm-vmalloc-introduce-array-allocation-functions
