--- a/series.conf
+++ b/series.conf
@@ -14243,6 +14243,7 @@
 	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
 	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
 	patches.suse/s390-hugetlb-fix-prepare_hugepage_range-check-for-2-GB-hugepages
+	patches.suse/xen-grants-prevent-integer-overflow-in-gnttab_dma_al.patch
 	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
 	patches.suse/KVM-VMX-Heed-the-msr-argument-in-msr_write_intercept.patch
 	patches.suse/ARM-dts-imx6qdl-kontron-samx6i-remove-duplicated-nod.patch
