KVM: SVM: fix tsc scaling cache logic (bsc#1203263).

--- a/series.conf
+++ b/series.conf
@@ -12848,6 +12848,7 @@
 	patches.suse/Input-bcm5974-set-missing-URB_NO_TRANSFER_DMA_MAP-ur.patch
 	patches.suse/Input-soc_button_array-also-add-Lenovo-Yoga-Tablet2-.patch
 	patches.suse/KEYS-trusted-tpm2-Fix-migratable-logic.patch
+	patches.suse/KVM-SVM-fix-tsc-scaling-cache-logic.patch
 	patches.suse/0001-KVM-x86-do-not-report-a-vCPU-as-preempted-outside-in.patch
 	patches.suse/drm-imx-fix-compiler-warning-with-gcc-12.patch
 	patches.suse/net-phy-dp83867-retrigger-SGMII-AN-when-link-change.patch
