--- a/series.conf
+++ b/series.conf
@@ -13009,6 +13009,7 @@
 	patches.suse/drm-msm-mdp4-Fix-refcount-leak-in-mdp4_modeset_init_.patch
 	patches.suse/drm-msm-dp-check-core_initialized-before-disable-int.patch
 	patches.suse/drm-msm-dp-force-link-training-for-display-resolutio.patch
+	patches.suse/xen-blkfront-Handle-NULL-gendisk.patch
 	patches.suse/s390-crash-make-copy_oldmem_page-return-number-of-bytes-copied
 	patches.suse/s390-cpumf-Handle-events-cycles-and-instructions-identical
 	patches.suse/regmap-irq-Fix-a-bug-in-regmap_irq_enable-for-type_i.patch
