--- a/series.conf
+++ b/series.conf
@@ -2795,6 +2795,7 @@
 	patches.suse/powerpc-perf-Fix-the-check-for-SIAR-value.patch
 	patches.suse/KVM-PPC-Book3S-HV-Fix-copy_tofrom_guest-routines.patch
 	patches.suse/KVM-PPC-Book3S-HV-Nested-Reflect-guest-PMU-in-use-to.patch
+	patches.suse/powerpc-doc-Fix-htmldocs-errors.patch
 	patches.suse/powerpc-smp-Fix-a-crash-while-booting-kvm-guest-with.patch
 	patches.suse/powerpc-smp-Update-cpu_core_map-on-all-PowerPc-syste.patch
 	patches.suse/powerpc-smp-Enable-CACHE-domain-for-shared-processor.patch
