xen-blkback: fix persistent grants negotiation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14108,6 +14108,7 @@
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
 	patches.suse/posix-cpu-timers-Cleanup-CPU-timers-before-freeing-t.patch
+	patches.suse/xen-blkback-fix-persistent-grants-negotiation.patch
 	patches.suse/xen-xenbus-fix-return-type-in-xenbus_file_read.patch
 	patches.suse/regulator-pca9450-Remove-restrictions-for-regulator-.patch
 	patches.suse/spi-meson-spicc-add-local-pow2-clock-ops-to-preserve.patch
