--- a/series.conf
+++ b/series.conf
@@ -14109,6 +14109,7 @@
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
 	patches.suse/posix-cpu-timers-Cleanup-CPU-timers-before-freeing-t.patch
 	patches.suse/xen-blkback-fix-persistent-grants-negotiation.patch
+	patches.suse/xen-blkback-Apply-feature_persistent-parameter-when-.patch
 	patches.suse/xen-xenbus-fix-return-type-in-xenbus_file_read.patch
 	patches.suse/regulator-pca9450-Remove-restrictions-for-regulator-.patch
 	patches.suse/spi-meson-spicc-add-local-pow2-clock-ops-to-preserve.patch
