xen-blkfront: Apply 'feature_persistent' parameter when connect (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14110,6 +14110,7 @@
 	patches.suse/posix-cpu-timers-Cleanup-CPU-timers-before-freeing-t.patch
 	patches.suse/xen-blkback-fix-persistent-grants-negotiation.patch
 	patches.suse/xen-blkback-Apply-feature_persistent-parameter-when-.patch
+	patches.suse/xen-blkfront-Apply-feature_persistent-parameter-when.patch
 	patches.suse/xen-xenbus-fix-return-type-in-xenbus_file_read.patch
 	patches.suse/regulator-pca9450-Remove-restrictions-for-regulator-.patch
 	patches.suse/spi-meson-spicc-add-local-pow2-clock-ops-to-preserve.patch
