xen-blkback: Advertise feature-persistent as user requested (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14250,6 +14250,7 @@
 	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
 	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
 	patches.suse/s390-hugetlb-fix-prepare_hugepage_range-check-for-2-GB-hugepages
+	patches.suse/xen-blkback-Advertise-feature-persistent-as-user-req.patch
 	patches.suse/xen-grants-prevent-integer-overflow-in-gnttab_dma_al.patch
 	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
 	patches.suse/KVM-VMX-Heed-the-msr-argument-in-msr_write_intercept.patch
