--- a/series.conf
+++ b/series.conf
@@ -14252,6 +14252,7 @@
 	patches.suse/s390-hugetlb-fix-prepare_hugepage_range-check-for-2-GB-hugepages
 	patches.suse/xen-blkback-Advertise-feature-persistent-as-user-req.patch
 	patches.suse/xen-blkfront-Advertise-feature-persistent-as-user-re.patch
+	patches.suse/xen-blkfront-Cache-feature_persistent-value-before-a.patch
 	patches.suse/xen-grants-prevent-integer-overflow-in-gnttab_dma_al.patch
 	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
 	patches.suse/KVM-VMX-Heed-the-msr-argument-in-msr_write_intercept.patch
