--- a/series.conf
+++ b/series.conf
@@ -13295,6 +13295,7 @@
 	patches.suse/drm-i915-gt-Serialize-TLB-invalidates-with-GT-resets.patch
 	patches.suse/drm-amd-display-Ignore-First-MST-Sideband-Message-Re.patch
 	patches.suse/drm-amd-display-Only-use-depth-36-bpp-linebuffers-on.patch
+	patches.suse/xen-gntdev-Ignore-failure-to-unmap-INVALID_GRANT_HAN.patch
 	patches.suse/ACPI-video-Fix-acpi_video_handles_brightness_key_pre.patch
 	patches.suse/arm64-dts-rockchip-Assign-RK3399-VDU-clock-rate.patch
 	patches.suse/reset-Fix-devm-bulk-optional-exclusive-control-gette.patch
