KVM: x86: Mark TSS busy during LTR emulation _after_ all fault checks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56746,6 +56746,7 @@
 	patches.suse/USB-Follow-up-to-SPDX-identifiers-addition-remove-no.patch
 	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-BNDCFGS-for-nested_ru.patch
 	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-DEBUGCTL-for-nested_r.patch
+	patches.suse/KVM-x86-Mark-TSS-busy-during-LTR-emulation-_after_-a.patch
 	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
