KVM: nVMX: Let userspace set nVMX MSR to any _host_ supported value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56748,6 +56748,7 @@
 	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-DEBUGCTL-for-nested_r.patch
 	patches.suse/KVM-x86-Mark-TSS-busy-during-LTR-emulation-_after_-a.patch
 	patches.suse/KVM-x86-Set-error-code-to-segment-selector-on-LLDT-L.patch
+	patches.suse/KVM-nVMX-Let-userspace-set-nVMX-MSR-to-any-_host_-su.patch
 	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
