--- a/series.conf
+++ b/series.conf
@@ -56937,6 +56937,7 @@
 	patches.suse/nvme-fabrics-parse-nvme-connect-Linux-error-codes.patch
 	patches.suse/scsi-lpfc-Check-the-return-value-of-alloc_workqueue.patch
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
+	patches.suse/xen-xenbus-fix-return-type-in-xenbus_file_read.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
 	patches.suse/drm-sun4i-dsi-Prevent-underflow-when-computing-packe.patch
