--- a/series.conf
+++ b/series.conf
@@ -14160,6 +14160,7 @@
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/netfilter-nf_tables-disallow-binding-to-already-boun.patch
 	patches.suse/loop-Check-for-overflow-while-configuring-loop.patch
+	patches.suse/drm-gem-Fix-GEM-handle-release-errors.patch
 	patches.suse/nouveau-explicitly-wait-on-the-fence-in-nouveau_bo_m.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
 	patches.suse/arm64-fix-rodata-full.patch
