ASoC: mchp-spdiftx: remove references to mchp_i2s_caps (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13962,6 +13962,7 @@
 	patches.suse/ASoC-fsl_easrc-use-snd_pcm_format_t-type-for-sample_.patch
 	patches.suse/ASoC-imx-card-use-snd_pcm_format_t-type-for-asrc_for.patch
 	patches.suse/ASoC-mchp-spdifrx-disable-end-of-block-interrupt-on-.patch
+	patches.suse/ASoC-mchp-spdiftx-remove-references-to-mchp_i2s_caps.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-HP-Spectre-x360-15-eb.patch
 	patches.suse/mfd-t7l66xb-Drop-platform-disable-callback.patch
 	patches.suse/mfd-max77620-Fix-refcount-leak-in-max77620_initialis.patch
