--- a/series.conf
+++ b/series.conf
@@ -14162,6 +14162,7 @@
 	patches.suse/loop-Check-for-overflow-while-configuring-loop.patch
 	patches.suse/drm-gem-Fix-GEM-handle-release-errors.patch
 	patches.suse/nouveau-explicitly-wait-on-the-fence-in-nouveau_bo_m.patch
+	patches.suse/drm-amdgpu-Move-psp_xgmi_terminate-call-from-amdgpu_.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
 	patches.suse/arm64-fix-rodata-full.patch
 	patches.suse/fbdev-fb_pm2fb-Avoid-potential-divide-by-zero-error.patch
