--- a/series.conf
+++ b/series.conf
@@ -14288,6 +14288,7 @@
 	patches.suse/ALSA-usb-audio-Fix-an-out-of-bounds-bug-in-__snd_usb.patch
 	patches.suse/ALSA-emu10k1-Fix-out-of-bounds-access-in-snd_emu10k1.patch
 	patches.suse/ASoC-qcom-sm8250-add-missing-module-owner.patch
+	patches.suse/ASoC-mchp-spdiftx-Fix-clang-Wbitfield-constant-conve.patch
 	patches.suse/nvme-tcp-fix-uaf-when-detecting-digest-errors.patch
 	patches.suse/hwmon-tps23861-fix-byte-order-in-resistance-register.patch
 	patches.suse/dt-bindings-hwmon-mr75203-fix-intel-vm-map-property-.patch
