--- a/series.conf
+++ b/series.conf
@@ -8136,6 +8136,7 @@
 	patches.suse/drm-lima-fix-warning-when-CONFIG_DEBUG_SG-y-CONFIG_D.patch
 	patches.suse/drm-ttm-Put-BO-in-its-memory-manager-s-lru-list.patch
 	patches.suse/drm-bridge-dw-hdmi-handle-ELD-when-DRM_BRIDGE_ATTACH.patch
+	patches.suse/drm-bridge-display-connector-implement-bus-fmts-call.patch
 	patches.suse/drm-meson-split-out-encoder-from-meson_dw_hdmi.patch
 	patches.suse/drm-nouveau-pmu-gm200-avoid-touching-PMU-outside-of-.patch
 	patches.suse/drm-nouveau-pmu-gm200-use-alternate-falcon-reset-seq.patch
