--- a/series.conf
+++ b/series.conf
@@ -14165,6 +14165,7 @@
 	patches.suse/drm-amdgpu-Move-psp_xgmi_terminate-call-from-amdgpu_.patch
 	patches.suse/drm-amdgpu-Check-num_gfx_rings-for-gfx-v9_0-rb-setup.patch
 	patches.suse/drm-radeon-add-a-force-flush-to-delay-work-when-rade.patch
+	patches.suse/drm-amdgpu-mmVM_L2_CNTL3-register-not-initialized-co.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
 	patches.suse/arm64-fix-rodata-full.patch
 	patches.suse/fbdev-fb_pm2fb-Avoid-potential-divide-by-zero-error.patch
