--- a/series.conf
+++ b/series.conf
@@ -14313,6 +14313,7 @@
 	patches.suse/drm-meson-Fix-OSD1-RGB-to-YCbCr-coefficient.patch
 	patches.suse/pinctrl-qcom-sc8180x-Fix-gpio_wakeirq_map.patch
 	patches.suse/pinctrl-qcom-sc8180x-Fix-wrong-pin-numbers.patch
+	patches.suse/pinctrl-sunxi-Fix-name-for-A100-R_PIO.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
