--- a/series.conf
+++ b/series.conf
@@ -14169,6 +14169,7 @@
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
 	patches.suse/arm64-fix-rodata-full.patch
 	patches.suse/fbdev-fb_pm2fb-Avoid-potential-divide-by-zero-error.patch
+	patches.suse/fbdev-chipsfb-Add-missing-pci_disable_device-in-chip.patch
 	patches.suse/fbdev-fbcon-Properly-revert-changes-when-vc_resize-f.patch
 	patches.suse/xen-privcmd-fix-error-exit-of-privcmd_ioctl_dm_op.patch
 	patches.suse/s390-fix-double-free-of-GS-and-RI-CBs-on-fork-failure
