pinctrl: qcom: sc8180x: Fix gpio_wakeirq_map (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14311,6 +14311,7 @@
 	patches.suse/drm-amdgpu-move-nbio-sdma_doorbell_range-into-sdma-c.patch
 	patches.suse/drm-meson-Correct-OSD1-global-alpha-value.patch
 	patches.suse/drm-meson-Fix-OSD1-RGB-to-YCbCr-coefficient.patch
+	patches.suse/pinctrl-qcom-sc8180x-Fix-gpio_wakeirq_map.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
