--- a/series.conf
+++ b/series.conf
@@ -14273,6 +14273,7 @@
 	patches.suse/ARM-dts-at91-sama5d2_icp-specify-proper-regulator-ou.patch
 	patches.suse/ARM-dts-at91-sama5d27_wlsom1-don-t-keep-ldo2-enabled.patch
 	patches.suse/ARM-dts-at91-sama5d2_icp-don-t-keep-vdd_other-enable.patch
+	patches.suse/efi-libstub-Disable-struct-randomization.patch
 	patches.suse/netfilter-nf_conntrack_irc-Fix-forged-IP-logic.patch
 	patches.suse/xen-netback-only-remove-hotplug-status-when-the-vif-.patch
 	patches.suse/wifi-iwlegacy-4965-corrected-fix-for-potential-off-b.patch
