drm/amdgpu: move nbio ih_doorbell_range() into ih code for vega (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14307,6 +14307,7 @@
 	patches.suse/kbuild-disable-header-exports-for-UML-in-a-straightf.patch
 	patches.suse/of-fdt-fix-off-by-one-error-in-unflatten_dt_nodes.patch
 	patches.suse/of-device-Fix-up-of_dma_configure_id-stub.patch
+	patches.suse/drm-amdgpu-move-nbio-ih_doorbell_range-into-ih-code-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
