pinctrl: qcom: sc8180x: Fix wrong pin numbers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14312,6 +14312,7 @@
 	patches.suse/drm-meson-Correct-OSD1-global-alpha-value.patch
 	patches.suse/drm-meson-Fix-OSD1-RGB-to-YCbCr-coefficient.patch
 	patches.suse/pinctrl-qcom-sc8180x-Fix-gpio_wakeirq_map.patch
+	patches.suse/pinctrl-qcom-sc8180x-Fix-wrong-pin-numbers.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
