--- a/series.conf
+++ b/series.conf
@@ -14310,6 +14310,7 @@
 	patches.suse/drm-amdgpu-move-nbio-ih_doorbell_range-into-ih-code-.patch
 	patches.suse/drm-amdgpu-move-nbio-sdma_doorbell_range-into-sdma-c.patch
 	patches.suse/drm-meson-Correct-OSD1-global-alpha-value.patch
+	patches.suse/drm-meson-Fix-OSD1-RGB-to-YCbCr-coefficient.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
