gpio: mpc8xxx: Fix support for IRQ_TYPE_LEVEL_LOW flow_type in mpc85xx (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14314,6 +14314,7 @@
 	patches.suse/pinctrl-qcom-sc8180x-Fix-gpio_wakeirq_map.patch
 	patches.suse/pinctrl-qcom-sc8180x-Fix-wrong-pin-numbers.patch
 	patches.suse/pinctrl-sunxi-Fix-name-for-A100-R_PIO.patch
+	patches.suse/gpio-mpc8xxx-Fix-support-for-IRQ_TYPE_LEVEL_LOW-flow.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
