--- a/series.conf
+++ b/series.conf
@@ -14309,6 +14309,7 @@
 	patches.suse/of-device-Fix-up-of_dma_configure_id-stub.patch
 	patches.suse/drm-amdgpu-move-nbio-ih_doorbell_range-into-ih-code-.patch
 	patches.suse/drm-amdgpu-move-nbio-sdma_doorbell_range-into-sdma-c.patch
+	patches.suse/drm-meson-Correct-OSD1-global-alpha-value.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
