of/device: Fix up of_dma_configure_id() stub (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14306,6 +14306,7 @@
 	patches.suse/docs-i2c-i2c-topology-fix-incorrect-heading.patch
 	patches.suse/kbuild-disable-header-exports-for-UML-in-a-straightf.patch
 	patches.suse/of-fdt-fix-off-by-one-error-in-unflatten_dt_nodes.patch
+	patches.suse/of-device-Fix-up-of_dma_configure_id-stub.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
