--- a/series.conf
+++ b/series.conf
@@ -14305,6 +14305,7 @@
 	patches.suse/s390-boot-fix-absolute-zero-lowcore-corruption-on-boot
 	patches.suse/docs-i2c-i2c-topology-fix-incorrect-heading.patch
 	patches.suse/kbuild-disable-header-exports-for-UML-in-a-straightf.patch
+	patches.suse/of-fdt-fix-off-by-one-error-in-unflatten_dt_nodes.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
