--- a/series.conf
+++ b/series.conf
@@ -12138,6 +12138,7 @@
 	patches.suse/x86-boot-Add-a-pointer-to-Confidential-Computing-blob-in-bootpar
 	patches.suse/x86-compressed-Add-SEV-SNP-feature-detection-setup
 	patches.suse/x86-compressed-Use-firmware-validated-CPUID-leaves-for-SEV-SNP-g
+	patches.suse/x86-compressed-Export-and-rename-add_identity_map
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
