kABI: Fix kABI after SNP-Guest backport (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -14928,6 +14928,8 @@
 
 	patches.kabi/kABI-Fix-kABI-after-mm-rmap-Fix-anon_vma-degree-ambi.patch
 
+	patches.kabi/kABI-Fix-kABI-after-SNP-Guest-backport.patch
+
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
 	# disabled. See patches for the SLE 15 SP4 notes.
