KVM: SVM: Define sev_features and VMPL field in the VMSA (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12103,6 +12103,7 @@
 	patches.suse/irqchip-aspeed-scu-ic-Fix-irq_of_parse_and_map-retur.patch
 	patches.suse/irqchip-armada-370-xp-Do-not-touch-Performance-Count.patch
 	patches.suse/irqchip-gic-v3-Ensure-pseudo-NMIs-have-an-ISB-betwee.patch
+	patches.suse/KVM-SVM-Define-sev_features-and-VMPL-field-in-the-VMSA
 	patches.suse/x86-sev-define-the-linux-specific-guest-termination-reasons.patch
 	patches.suse/x86-sev-save-the-negotiated-ghcb-version.patch
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
