x86/sev: Add a sev= cmdline option (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12142,6 +12142,7 @@
 	patches.suse/x86-compressed-64-Add-identity-mapping-for-Confidential-Computin
 	patches.suse/x86-sev-Add-SEV-SNP-feature-detection-setup
 	patches.suse/x86-sev-Use-firmware-validated-CPUID-for-SEV-SNP-guests
+	patches.suse/x86-sev-Add-a-sev-cmdline-option
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
