KVM: SVM: Update the SEV-ES save area mapping (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12106,6 +12106,7 @@
 	patches.suse/KVM-SVM-Define-sev_features-and-VMPL-field-in-the-VMSA
 	patches.suse/KVM-SVM-Create-a-separate-mapping-for-the-SEV-ES-save-area
 	patches.suse/KVM-SVM-Create-a-separate-mapping-for-the-GHCB-save-area
+	patches.suse/KVM-SVM-Update-the-SEV-ES-save-area-mapping
 	patches.suse/x86-sev-define-the-linux-specific-guest-termination-reasons.patch
 	patches.suse/x86-sev-save-the-negotiated-ghcb-version.patch
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
