x86/kernel: Validate ROM memory before accessing when SEV-SNP is active (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12122,6 +12122,7 @@
 	patches.suse/x86-sev-Register-GHCB-memory-when-SEV-SNP-is-active
 	patches.suse/x86-sev-Add-helper-for-validating-pages-in-early-enc-attribute-c
 	patches.suse/x86-kernel-Mark-the-.bss.decrypted-section-as-shared-in-the-RMP-
+	patches.suse/x86-kernel-Validate-ROM-memory-before-accessing-when-SEV-SNP-is-
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
