--- a/series.conf
+++ b/series.conf
@@ -12147,6 +12147,7 @@
 	patches.suse/x86-sev-Register-SEV-SNP-guest-request-platform-device
 	patches.suse/virt-Add-SEV-SNP-guest-driver
 	patches.suse/virt-sevguest-Add-support-to-derive-key
+	patches.suse/virt-sevguest-Add-support-to-get-extended-report
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
