--- a/series.conf
+++ b/series.conf
@@ -12117,6 +12117,7 @@
 	patches.suse/x86-sev-Check-SEV-SNP-features-support
 	patches.suse/x86-sev-Add-a-helper-for-the-PVALIDATE-instruction
 	patches.suse/x86-sev-Check-the-VMPL-level
+	patches.suse/x86-compressed-Add-helper-for-validating-pages-in-the-decompress
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
