--- a/series.conf
+++ b/series.conf
@@ -12136,6 +12136,7 @@
 	patches.suse/x86-sev-Move-MSR-based-VMGEXITs-for-CPUID-to-helper
 	patches.suse/x86-compressed-64-Add-support-for-SEV-SNP-CPUID-table-in-VC-hand
 	patches.suse/x86-boot-Add-a-pointer-to-Confidential-Computing-blob-in-bootpar
+	patches.suse/x86-compressed-Add-SEV-SNP-feature-detection-setup
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
