x86/sev: Add helper for validating pages in early enc attribute changes (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12120,6 +12120,7 @@
 	patches.suse/x86-compressed-Add-helper-for-validating-pages-in-the-decompress
 	patches.suse/x86-compressed-Register-GHCB-memory-when-SEV-SNP-is-active
 	patches.suse/x86-sev-Register-GHCB-memory-when-SEV-SNP-is-active
+	patches.suse/x86-sev-Add-helper-for-validating-pages-in-early-enc-attribute-c
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
