--- a/series.conf
+++ b/series.conf
@@ -12119,6 +12119,7 @@
 	patches.suse/x86-sev-Check-the-VMPL-level
 	patches.suse/x86-compressed-Add-helper-for-validating-pages-in-the-decompress
 	patches.suse/x86-compressed-Register-GHCB-memory-when-SEV-SNP-is-active
+	patches.suse/x86-sev-Register-GHCB-memory-when-SEV-SNP-is-active
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
