x86/mm: Extend cc_attr to include AMD SEV-SNP (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12111,6 +12111,7 @@
 	patches.suse/x86-boot-Use-MSR-read-write-helpers-instead-of-inline-assembly
 	patches.suse/x86-compressed-64-Detect-setup-SEV-SME-features-earlier-during-b
 	patches.suse/x86-sev-Detect-setup-SEV-SME-features-earlier-in-boot
+	patches.suse/x86-mm-Extend-cc_attr-to-include-AMD-SEV-SNP
 	patches.suse/x86-sev-define-the-linux-specific-guest-termination-reasons.patch
 	patches.suse/x86-sev-save-the-negotiated-ghcb-version.patch
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
