x86/compressed/64: Add identity mapping for Confidential Computing blob (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12139,6 +12139,7 @@
 	patches.suse/x86-compressed-Add-SEV-SNP-feature-detection-setup
 	patches.suse/x86-compressed-Use-firmware-validated-CPUID-leaves-for-SEV-SNP-g
 	patches.suse/x86-compressed-Export-and-rename-add_identity_map
+	patches.suse/x86-compressed-64-Add-identity-mapping-for-Confidential-Computin
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
