virt: sevguest: Add support to derive key (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12146,6 +12146,7 @@
 	patches.suse/x86-sev-Provide-support-for-SNP-guest-request-NAEs
 	patches.suse/x86-sev-Register-SEV-SNP-guest-request-platform-device
 	patches.suse/virt-Add-SEV-SNP-guest-driver
+	patches.suse/virt-sevguest-Add-support-to-derive-key
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
