--- a/series.conf
+++ b/series.conf
@@ -12152,6 +12152,7 @@
 	patches.suse/virt-sevguest-Fix-return-value-check-in-alloc_shared_pages
 	patches.suse/virt-sevguest-Fix-bool-function-returning-negative-value
 	patches.suse/x86-boot-Put-globals-that-are-accessed-early-into-the-.data-sect
+	patches.suse/x86-sev-Get-the-AP-jump-table-address-from-secrets-page
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
