--- a/series.conf
+++ b/series.conf
@@ -12134,6 +12134,7 @@
 	patches.suse/x86-boot-Add-Confidential-Computing-type-to-setup_data
 	patches.suse/KVM-x86-Move-lookup-of-indexed-CPUID-leafs-to-helper
 	patches.suse/x86-sev-Move-MSR-based-VMGEXITs-for-CPUID-to-helper
+	patches.suse/x86-compressed-64-Add-support-for-SEV-SNP-CPUID-table-in-VC-hand
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
