x86/head/64: Re-enable stack protection (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12125,6 +12125,7 @@
 	patches.suse/x86-kernel-Validate-ROM-memory-before-accessing-when-SEV-SNP-is-
 	patches.suse/x86-mm-Validate-memory-when-changing-the-C-bit
 	patches.suse/x86-sev-Use-SEV-SNP-AP-creation-to-start-secondary-CPUs
+	patches.suse/x86-head-64-Re-enable-stack-protection
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
