--- a/series.conf
+++ b/series.conf
@@ -12150,6 +12150,7 @@
 	patches.suse/virt-sevguest-Add-support-to-get-extended-report
 	patches.suse/virt-sevguest-Add-documentation-for-SEV-SNP-CPUID-Enforcement
 	patches.suse/virt-sevguest-Fix-return-value-check-in-alloc_shared_pages
+	patches.suse/virt-sevguest-Fix-bool-function-returning-negative-value
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
