--- a/series.conf
+++ b/series.conf
@@ -12121,6 +12121,7 @@
 	patches.suse/x86-compressed-Register-GHCB-memory-when-SEV-SNP-is-active
 	patches.suse/x86-sev-Register-GHCB-memory-when-SEV-SNP-is-active
 	patches.suse/x86-sev-Add-helper-for-validating-pages-in-early-enc-attribute-c
+	patches.suse/x86-kernel-Mark-the-.bss.decrypted-section-as-shared-in-the-RMP-
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
