--- a/series.conf
+++ b/series.conf
@@ -12128,6 +12128,7 @@
 	patches.suse/x86-head-64-Re-enable-stack-protection
 	patches.suse/x86-compressed-acpi-Move-EFI-detection-to-helper
 	patches.suse/x86-compressed-acpi-Move-EFI-system-table-lookup-to-helper
+	patches.suse/x86-compressed-acpi-Move-EFI-config-table-lookup-to-helper
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
