x86/sev: Move MSR-based VMGEXITs for CPUID to helper (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12133,6 +12133,7 @@
 	patches.suse/x86-compressed-acpi-Move-EFI-kexec-handling-into-common-code
 	patches.suse/x86-boot-Add-Confidential-Computing-type-to-setup_data
 	patches.suse/KVM-x86-Move-lookup-of-indexed-CPUID-leafs-to-helper
+	patches.suse/x86-sev-Move-MSR-based-VMGEXITs-for-CPUID-to-helper
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
