--- a/series.conf
+++ b/series.conf
@@ -12105,6 +12105,7 @@
 	patches.suse/irqchip-gic-v3-Ensure-pseudo-NMIs-have-an-ISB-betwee.patch
 	patches.suse/KVM-SVM-Define-sev_features-and-VMPL-field-in-the-VMSA
 	patches.suse/KVM-SVM-Create-a-separate-mapping-for-the-SEV-ES-save-area
+	patches.suse/KVM-SVM-Create-a-separate-mapping-for-the-GHCB-save-area
 	patches.suse/x86-sev-define-the-linux-specific-guest-termination-reasons.patch
 	patches.suse/x86-sev-save-the-negotiated-ghcb-version.patch
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
