x86/compressed/acpi: Move EFI kexec handling into common code (jsc#SLE-19924, jsc#SLE-24814).

--- a/series.conf
+++ b/series.conf
@@ -12130,6 +12130,7 @@
 	patches.suse/x86-compressed-acpi-Move-EFI-system-table-lookup-to-helper
 	patches.suse/x86-compressed-acpi-Move-EFI-config-table-lookup-to-helper
 	patches.suse/x86-compressed-acpi-Move-EFI-vendor-table-lookup-to-helper
+	patches.suse/x86-compressed-acpi-Move-EFI-kexec-handling-into-common-code
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
