--- a/series.conf
+++ b/series.conf
@@ -12107,6 +12107,7 @@
 	patches.suse/KVM-SVM-Create-a-separate-mapping-for-the-SEV-ES-save-area
 	patches.suse/KVM-SVM-Create-a-separate-mapping-for-the-GHCB-save-area
 	patches.suse/KVM-SVM-Update-the-SEV-ES-save-area-mapping
+	patches.suse/x86-boot-Introduce-helpers-for-MSR-reads-writes
 	patches.suse/x86-sev-define-the-linux-specific-guest-termination-reasons.patch
 	patches.suse/x86-sev-save-the-negotiated-ghcb-version.patch
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
