--- a/series.conf
+++ b/series.conf
@@ -12109,6 +12109,7 @@
 	patches.suse/KVM-SVM-Update-the-SEV-ES-save-area-mapping
 	patches.suse/x86-boot-Introduce-helpers-for-MSR-reads-writes
 	patches.suse/x86-boot-Use-MSR-read-write-helpers-instead-of-inline-assembly
+	patches.suse/x86-compressed-64-Detect-setup-SEV-SME-features-earlier-during-b
 	patches.suse/x86-sev-define-the-linux-specific-guest-termination-reasons.patch
 	patches.suse/x86-sev-save-the-negotiated-ghcb-version.patch
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
