--- a/series.conf
+++ b/series.conf
@@ -12115,6 +12115,7 @@
 	patches.suse/x86-sev-define-the-linux-specific-guest-termination-reasons.patch
 	patches.suse/x86-sev-save-the-negotiated-ghcb-version.patch
 	patches.suse/x86-sev-Check-SEV-SNP-features-support
+	patches.suse/x86-sev-Add-a-helper-for-the-PVALIDATE-instruction
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
