- x86/sev: Check the VMPL level (jsc#SLE-19924, jsc#SLE-24814). - Refresh   patches.suse/revert-x86-sev-expose-sev_es_ghcb_hv_call-for-use-by-hyperv.patch.

--- a/series.conf
+++ b/series.conf
@@ -12116,6 +12116,7 @@
 	patches.suse/x86-sev-save-the-negotiated-ghcb-version.patch
 	patches.suse/x86-sev-Check-SEV-SNP-features-support
 	patches.suse/x86-sev-Add-a-helper-for-the-PVALIDATE-instruction
+	patches.suse/x86-sev-Check-the-VMPL-level
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
