--- a/series.conf
+++ b/series.conf
@@ -12131,6 +12131,7 @@
 	patches.suse/x86-compressed-acpi-Move-EFI-config-table-lookup-to-helper
 	patches.suse/x86-compressed-acpi-Move-EFI-vendor-table-lookup-to-helper
 	patches.suse/x86-compressed-acpi-Move-EFI-kexec-handling-into-common-code
+	patches.suse/x86-boot-Add-Confidential-Computing-type-to-setup_data
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
