squashfs: fix divide error in calculate_skip() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50849,6 +50849,7 @@
 	patches.suse/nvmet-use-new-ana_log_size-instead-the-old-one.patch
 	patches.suse/blk-mq-plug-request-for-shared-sbitmap.patch
 	patches.suse/blk-mq-Swap-two-calls-in-blk_mq_exit_queue.patch
+	patches.suse/squashfs-fix-divide-error-in-calculate_skip.patch
 	patches.suse/powerpc-pseries-Fix-hcall-tracing-recursion-in-pv-qu.patch
 	patches.suse/powerpc-pseries-Don-t-trace-hcall-tracing-wrapper.patch
 	patches.suse/powerpc-pseries-use-notrace-hcall-variant-for-H_CEDE.patch
