--- a/series.conf
+++ b/series.conf
@@ -45247,6 +45247,7 @@
 	patches.suse/powerpc-perf-hv-gpci-Add-cpu-hotplug-support.patch
 	patches.suse/powerpc-hv-gpci-Add-sysfs-files-inside-hv-gpci-devic.patch
 	patches.suse/powerpc-security-Fix-link-stack-flush-instruction.patch
+	patches.suse/powerpc-drmem-Make-lmb_size-64-bit.patch
 	patches.suse/powerpc-book3s64-radix-Make-radix_mem_block_size-64b.patch
 	patches.suse/powerpc-papr_scm-Add-PAPR-command-family-to-pass-thr.patch
 	patches.suse/s390-zcrypt-remove-set_fs-invocation-in-zcrypt-device-driver
