--- a/series.conf
+++ b/series.conf
@@ -12145,6 +12145,7 @@
 	patches.suse/x86-sev-Add-a-sev-cmdline-option
 	patches.suse/x86-sev-Provide-support-for-SNP-guest-request-NAEs
 	patches.suse/x86-sev-Register-SEV-SNP-guest-request-platform-device
+	patches.suse/virt-Add-SEV-SNP-guest-driver
 	patches.suse/ACPICA-Avoid-cache-flush-inside-virtual-machines.patch
 	patches.suse/x86-mm-simplify-reserve_brk.patch
 	patches.suse/x86-entry-remove-skip_r11rcx.patch
