usb: typec: tipd: Add short-circuit for no irqs (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -6383,6 +6383,7 @@
 	patches.suse/usb-typec-ucsi-Read-the-PDOs-in-separate-work.patch
 	patches.suse/usb-typec-ucsi-Better-fix-for-missing-unplug-events-.patch
 	patches.suse/usb-typec-tipd-Split-interrupt-handler.patch
+	patches.suse/usb-typec-tipd-Add-short-circuit-for-no-irqs.patch
 	patches.suse/usb-phy-tegra-Support-OTG-mode-programming.patch
 	patches.suse/usb-xhci-mtk-use-xhci_dbg-to-print-log.patch
 	patches.suse/usb-gadget-uvc-fix-multiple-opens.patch
