--- a/series.conf
+++ b/series.conf
@@ -2181,6 +2181,7 @@
 	patches.kernel.org/5.19.10-020-ieee802154-cc2520-add-rc-code-in-cc2520_tx.patch
 	patches.kernel.org/5.19.10-021-Input-iforce-add-support-for-Boeder-Force-Fee.patch
 	patches.kernel.org/5.19.10-022-drm-amdgpu-disable-FRU-access-on-special-SIEN.patch
+	patches.kernel.org/5.19.10-023-drm-amd-pm-use-vbios-carried-pptable-for-all-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
