--- a/series.conf
+++ b/series.conf
@@ -2193,6 +2193,7 @@
 	patches.kernel.org/5.19.10-032-LoongArch-Fix-section-mismatch-due-to-acpi_os.patch
 	patches.kernel.org/5.19.10-033-LoongArch-Fix-arch_remove_memory-undefined-bu.patch
 	patches.kernel.org/5.19.10-034-gpio-104-dio-48e-Make-irq_chip-immutable.patch
+	patches.kernel.org/5.19.10-035-gpio-104-idio-16-Make-irq_chip-immutable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
