Input: goodix - add support for GT1158 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2166,6 +2166,7 @@
 	patches.kernel.org/5.19.10-005-RDMA-mlx5-Add-a-umr-recovery-flow.patch
 	patches.kernel.org/5.19.10-006-RDMA-mlx5-Fix-UMR-cleanup-on-error-flow-of-dr.patch
 	patches.kernel.org/5.19.10-007-ACPI-resource-skip-IRQ-override-on-AMD-Zen-pl.patch
+	patches.kernel.org/5.19.10-008-Input-goodix-add-support-for-GT1158.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
