--- a/series.conf
+++ b/series.conf
@@ -2196,6 +2196,7 @@
 	patches.kernel.org/5.19.10-035-gpio-104-idio-16-Make-irq_chip-immutable.patch
 	patches.kernel.org/5.19.10-036-RDMA-irdma-Use-s-g-array-in-post-send-only-wh.patch
 	patches.kernel.org/5.19.10-037-Input-goodix-add-compatible-string-for-GT1158.patch
+	patches.kernel.org/5.19.10-038-Linux-5.19.10.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
