--- a/series.conf
+++ b/series.conf
@@ -2165,6 +2165,7 @@
 	patches.kernel.org/5.19.10-004-RDMA-mlx5-Rely-on-RoCE-fw-cap-instead-of-devl.patch
 	patches.kernel.org/5.19.10-005-RDMA-mlx5-Add-a-umr-recovery-flow.patch
 	patches.kernel.org/5.19.10-006-RDMA-mlx5-Fix-UMR-cleanup-on-error-flow-of-dr.patch
+	patches.kernel.org/5.19.10-007-ACPI-resource-skip-IRQ-override-on-AMD-Zen-pl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
