LoongArch: Fix section mismatch due to acpi_os_ioremap() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2190,6 +2190,7 @@
 	patches.kernel.org/5.19.10-029-platform-x86-acer-wmi-Acer-Aspire-One-AOD270-.patch
 	patches.kernel.org/5.19.10-030-usb-storage-Add-ASUS-0x0b05-0x1932-to-IGNORE_.patch
 	patches.kernel.org/5.19.10-031-platform-x86-asus-wmi-Increase-FAN_CURVE_BUF_.patch
+	patches.kernel.org/5.19.10-032-LoongArch-Fix-section-mismatch-due-to-acpi_os.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
