--- a/series.conf
+++ b/series.conf
@@ -2178,6 +2178,7 @@
 	patches.kernel.org/5.19.10-017-tg3-Disable-tg3-device-on-system-reboot-to-av.patch
 	patches.kernel.org/5.19.10-018-r8152-add-PID-for-the-Lenovo-OneLink-Dock.patch
 	patches.kernel.org/5.19.10-019-gpio-mockup-remove-gpio-debugfs-when-remove-d.patch
+	patches.kernel.org/5.19.10-020-ieee802154-cc2520-add-rc-code-in-cc2520_tx.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
