r8152: add PID for the Lenovo OneLink+ Dock (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2176,6 +2176,7 @@
 	patches.kernel.org/5.19.10-015-hid-intel-ish-hid-ishtp-Fix-ishtp-client-send.patch
 	patches.kernel.org/5.19.10-016-Bluetooth-MGMT-Fix-Get-Device-Flags.patch
 	patches.kernel.org/5.19.10-017-tg3-Disable-tg3-device-on-system-reboot-to-av.patch
+	patches.kernel.org/5.19.10-018-r8152-add-PID-for-the-Lenovo-OneLink-Dock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
