--- a/series.conf
+++ b/series.conf
@@ -2191,6 +2191,7 @@
 	patches.kernel.org/5.19.10-030-usb-storage-Add-ASUS-0x0b05-0x1932-to-IGNORE_.patch
 	patches.kernel.org/5.19.10-031-platform-x86-asus-wmi-Increase-FAN_CURVE_BUF_.patch
 	patches.kernel.org/5.19.10-032-LoongArch-Fix-section-mismatch-due-to-acpi_os.patch
+	patches.kernel.org/5.19.10-033-LoongArch-Fix-arch_remove_memory-undefined-bu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
