platform/surface: aggregator_registry: Add support for Surface Laptop Go 2 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2167,6 +2167,7 @@
 	patches.kernel.org/5.19.10-006-RDMA-mlx5-Fix-UMR-cleanup-on-error-flow-of-dr.patch
 	patches.kernel.org/5.19.10-007-ACPI-resource-skip-IRQ-override-on-AMD-Zen-pl.patch
 	patches.kernel.org/5.19.10-008-Input-goodix-add-support-for-GT1158.patch
+	patches.kernel.org/5.19.10-009-platform-surface-aggregator_registry-Add-supp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
