platform/x86: acer-wmi: Acer Aspire One AOD270/Packard Bell Dot keymap fixes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2187,6 +2187,7 @@
 	patches.kernel.org/5.19.10-026-drm-amd-amdgpu-skip-ucode-loading-if-ucode_si.patch
 	patches.kernel.org/5.19.10-027-net-dsa-hellcreek-Print-warning-only-once.patch
 	patches.kernel.org/5.19.10-028-perf-arm_pmu_platform-fix-tests-for-platform_.patch
+	patches.kernel.org/5.19.10-029-platform-x86-acer-wmi-Acer-Aspire-One-AOD270-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
