--- a/series.conf
+++ b/series.conf
@@ -2161,6 +2161,7 @@
 	patches.kernel.org/5.19.9-190-Linux-5.19.9.patch
 	patches.kernel.org/5.19.10-001-iommu-vt-d-Fix-kdump-kernels-boot-failure-wit.patch
 	patches.kernel.org/5.19.10-002-net-mlx5-Introduce-ifc-bits-for-using-softwar.patch
+	patches.kernel.org/5.19.10-003-net-mlx5-Use-software-VHCA-id-when-it-s-suppo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
