--- a/series.conf
+++ b/series.conf
@@ -2185,6 +2185,7 @@
 	patches.kernel.org/5.19.10-024-nvme-pci-add-NVME_QUIRK_BOGUS_NID-for-Lexar-N.patch
 	patches.kernel.org/5.19.10-025-nvmet-tcp-fix-unhandled-tcp-states-in-nvmet_t.patch
 	patches.kernel.org/5.19.10-026-drm-amd-amdgpu-skip-ucode-loading-if-ucode_si.patch
+	patches.kernel.org/5.19.10-027-net-dsa-hellcreek-Print-warning-only-once.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
