--- a/series.conf
+++ b/series.conf
@@ -2194,6 +2194,7 @@
 	patches.kernel.org/5.19.10-033-LoongArch-Fix-arch_remove_memory-undefined-bu.patch
 	patches.kernel.org/5.19.10-034-gpio-104-dio-48e-Make-irq_chip-immutable.patch
 	patches.kernel.org/5.19.10-035-gpio-104-idio-16-Make-irq_chip-immutable.patch
+	patches.kernel.org/5.19.10-036-RDMA-irdma-Use-s-g-array-in-post-send-only-wh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
