--- a/series.conf
+++ b/series.conf
@@ -2175,6 +2175,7 @@
 	patches.kernel.org/5.19.10-014-HID-ishtp-hid-clientHID-ishtp-hid-client-Fix-.patch
 	patches.kernel.org/5.19.10-015-hid-intel-ish-hid-ishtp-Fix-ishtp-client-send.patch
 	patches.kernel.org/5.19.10-016-Bluetooth-MGMT-Fix-Get-Device-Flags.patch
+	patches.kernel.org/5.19.10-017-tg3-Disable-tg3-device-on-system-reboot-to-av.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
