--- a/series.conf
+++ b/series.conf
@@ -2177,6 +2177,7 @@
 	patches.kernel.org/5.19.10-016-Bluetooth-MGMT-Fix-Get-Device-Flags.patch
 	patches.kernel.org/5.19.10-017-tg3-Disable-tg3-device-on-system-reboot-to-av.patch
 	patches.kernel.org/5.19.10-018-r8152-add-PID-for-the-Lenovo-OneLink-Dock.patch
+	patches.kernel.org/5.19.10-019-gpio-mockup-remove-gpio-debugfs-when-remove-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
