--- a/series.conf
+++ b/series.conf
@@ -2174,6 +2174,7 @@
 	patches.kernel.org/5.19.10-013-dt-bindings-iio-gyroscope-bosch-bmg160-correc.patch
 	patches.kernel.org/5.19.10-014-HID-ishtp-hid-clientHID-ishtp-hid-client-Fix-.patch
 	patches.kernel.org/5.19.10-015-hid-intel-ish-hid-ishtp-Fix-ishtp-client-send.patch
+	patches.kernel.org/5.19.10-016-Bluetooth-MGMT-Fix-Get-Device-Flags.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
