RDMA/mlx5: Rely on RoCE fw cap instead of devlink when setting profile (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2162,6 +2162,7 @@
 	patches.kernel.org/5.19.10-001-iommu-vt-d-Fix-kdump-kernels-boot-failure-wit.patch
 	patches.kernel.org/5.19.10-002-net-mlx5-Introduce-ifc-bits-for-using-softwar.patch
 	patches.kernel.org/5.19.10-003-net-mlx5-Use-software-VHCA-id-when-it-s-suppo.patch
+	patches.kernel.org/5.19.10-004-RDMA-mlx5-Rely-on-RoCE-fw-cap-instead-of-devl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
