--- a/series.conf
+++ b/series.conf
@@ -2186,6 +2186,7 @@
 	patches.kernel.org/5.19.10-025-nvmet-tcp-fix-unhandled-tcp-states-in-nvmet_t.patch
 	patches.kernel.org/5.19.10-026-drm-amd-amdgpu-skip-ucode-loading-if-ucode_si.patch
 	patches.kernel.org/5.19.10-027-net-dsa-hellcreek-Print-warning-only-once.patch
+	patches.kernel.org/5.19.10-028-perf-arm_pmu_platform-fix-tests-for-platform_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
