--- a/series.conf
+++ b/series.conf
@@ -2168,6 +2168,7 @@
 	patches.kernel.org/5.19.10-007-ACPI-resource-skip-IRQ-override-on-AMD-Zen-pl.patch
 	patches.kernel.org/5.19.10-008-Input-goodix-add-support-for-GT1158.patch
 	patches.kernel.org/5.19.10-009-platform-surface-aggregator_registry-Add-supp.patch
+	patches.kernel.org/5.19.10-010-drm-msm-rd-Fix-FIFO-full-deadlock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
