--- a/series.conf
+++ b/series.conf
@@ -2189,6 +2189,7 @@
 	patches.kernel.org/5.19.10-028-perf-arm_pmu_platform-fix-tests-for-platform_.patch
 	patches.kernel.org/5.19.10-029-platform-x86-acer-wmi-Acer-Aspire-One-AOD270-.patch
 	patches.kernel.org/5.19.10-030-usb-storage-Add-ASUS-0x0b05-0x1932-to-IGNORE_.patch
+	patches.kernel.org/5.19.10-031-platform-x86-asus-wmi-Increase-FAN_CURVE_BUF_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
