--- a/series.conf
+++ b/series.conf
@@ -2163,6 +2163,7 @@
 	patches.kernel.org/5.19.10-002-net-mlx5-Introduce-ifc-bits-for-using-softwar.patch
 	patches.kernel.org/5.19.10-003-net-mlx5-Use-software-VHCA-id-when-it-s-suppo.patch
 	patches.kernel.org/5.19.10-004-RDMA-mlx5-Rely-on-RoCE-fw-cap-instead-of-devl.patch
+	patches.kernel.org/5.19.10-005-RDMA-mlx5-Add-a-umr-recovery-flow.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
