nvme-pci: add NVME_QUIRK_BOGUS_NID for Lexar NM610 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2182,6 +2182,7 @@
 	patches.kernel.org/5.19.10-021-Input-iforce-add-support-for-Boeder-Force-Fee.patch
 	patches.kernel.org/5.19.10-022-drm-amdgpu-disable-FRU-access-on-special-SIEN.patch
 	patches.kernel.org/5.19.10-023-drm-amd-pm-use-vbios-carried-pptable-for-all-.patch
+	patches.kernel.org/5.19.10-024-nvme-pci-add-NVME_QUIRK_BOGUS_NID-for-Lexar-N.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
