HID: ishtp-hid-clientHID: ishtp-hid-client: Fix comment typo (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2172,6 +2172,7 @@
 	patches.kernel.org/5.19.10-011-peci-cpu-Fix-use-after-free-in-adev_release.patch
 	patches.kernel.org/5.19.10-012-kvm-x86-mmu-Always-flush-TLBs-when-enabling-d.patch
 	patches.kernel.org/5.19.10-013-dt-bindings-iio-gyroscope-bosch-bmg160-correc.patch
+	patches.kernel.org/5.19.10-014-HID-ishtp-hid-clientHID-ishtp-hid-client-Fix-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
