--- a/series.conf
+++ b/series.conf
@@ -2170,6 +2170,7 @@
 	patches.kernel.org/5.19.10-009-platform-surface-aggregator_registry-Add-supp.patch
 	patches.kernel.org/5.19.10-010-drm-msm-rd-Fix-FIFO-full-deadlock.patch
 	patches.kernel.org/5.19.10-011-peci-cpu-Fix-use-after-free-in-adev_release.patch
+	patches.kernel.org/5.19.10-012-kvm-x86-mmu-Always-flush-TLBs-when-enabling-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
