usb: storage: Add ASUS <0x0b05:0x1932> to IGNORE_UAS (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2188,6 +2188,7 @@
 	patches.kernel.org/5.19.10-027-net-dsa-hellcreek-Print-warning-only-once.patch
 	patches.kernel.org/5.19.10-028-perf-arm_pmu_platform-fix-tests-for-platform_.patch
 	patches.kernel.org/5.19.10-029-platform-x86-acer-wmi-Acer-Aspire-One-AOD270-.patch
+	patches.kernel.org/5.19.10-030-usb-storage-Add-ASUS-0x0b05-0x1932-to-IGNORE_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
