RDMA/mlx5: Fix UMR cleanup on error flow of driver init (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2164,6 +2164,7 @@
 	patches.kernel.org/5.19.10-003-net-mlx5-Use-software-VHCA-id-when-it-s-suppo.patch
 	patches.kernel.org/5.19.10-004-RDMA-mlx5-Rely-on-RoCE-fw-cap-instead-of-devl.patch
 	patches.kernel.org/5.19.10-005-RDMA-mlx5-Add-a-umr-recovery-flow.patch
+	patches.kernel.org/5.19.10-006-RDMA-mlx5-Fix-UMR-cleanup-on-error-flow-of-dr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
