supported.conf: Add drivers/virt/coco/sevguest/sevguest

--- a/supported.conf
+++ b/supported.conf
@@ -4668,6 +4668,7 @@
 -!optional	drivers/virt/acrn/acrn
 		drivers/virt/nitro_enclaves/nitro_enclaves
 -		drivers/virt/vboxguest/vboxguest
++base		drivers/virt/coco/sevguest/sevguest
 +base		drivers/virtio/virtio
 +base		drivers/virtio/virtio_balloon
 		drivers/virtio/virtio_dma_buf
