usb: typec: tipd: Fix initialization sequence for cd321x (jsc#PED-531).

--- a/series.conf
+++ b/series.conf
@@ -7344,6 +7344,7 @@
 	patches.suse/usb-chipidea-ci_hdrc_imx-fix-potential-error-pointer.patch
 	patches.suse/usb-hub-Fix-locking-issues-with-address0_mutex.patch
 	patches.suse/usb-typec-tipd-Fix-typo-in-cd321x_switch_power_state.patch
+	patches.suse/usb-typec-tipd-Fix-initialization-sequence-for-cd321.patch
 	patches.suse/USB-serial-option-add-Telit-LE910S1-0x9200-compositi.patch
 	patches.suse/USB-serial-pl2303-fix-GC-type-detection.patch
 	patches.suse/USB-serial-option-add-Fibocom-FM101-GL-variants.patch
