- usb: typec: port-mapper: Convert to the component framework   (jsc#PED-531). - Refresh patches.suse/typeC-Add-kABI-placeholders.patch.

--- a/series.conf
+++ b/series.conf
@@ -8899,6 +8899,7 @@
 	patches.suse/acpi-Export-acpi_bus_type.patch
 	patches.suse/acpi-Store-CRC-32-hash-of-the-_PLD-in-struct-acpi_de.patch
 	patches.suse/usb-Link-the-ports-to-the-connectors-they-are-attach.patch
+	patches.suse/usb-typec-port-mapper-Convert-to-the-component-frame.patch
 	patches.suse/thunderbolt-xdomain-Avoid-potential-stack-OOB-read.patch
 	patches.suse/thunderbolt-Runtime-PM-activate-both-ends-of-the-dev.patch
 	patches.suse/thunderbolt-Tear-down-existing-tunnels-when-resuming.patch
