blacklist.conf: ad2c302bc604 EDAC/sifive: Fix non-kernel-doc comment
Signed-off-by: Borislav Petkov <bp@suse.de>

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -401,3 +401,4 @@ f5840e0da6397586f3dbfaf15227588d1218dfe3 # already applied
 9a39abb7c9aab50eec4ac4421e9ee7f3de013d24 # memory layout change, might break debuggers
 953503751a426413ea8aee2299ae3ee971b70d9b # reverts commit 6f5c672d17f583b081e283927f5040f726c54598, which is not backported
 1dbd11ca75fe664d3e54607547771d021f531f59 # removal of unused function, would break KABI
+ad2c302bc6049c56c85cc2b64a0b4bd8e7ffdc56 # kernel-doc warning
