blacklist.conf: ad2c302bc604 EDAC/sifive: Fix non-kernel-doc comment
Signed-off-by: Borislav Petkov <bp@suse.de>

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1610,3 +1610,4 @@ ec2444530612a886b406e2830d7f314d1a07d4bb # not relevant to our configs
 835d1c3a98799914db8aee0973018af21128cd1e # Patch 62a679cb2825 ("arm64: simplify ptrauth initialization") is missing, so this one is not safe.
 519ea6f1c82fcdc9842908155ae379de47818778 # This needs f4693c2716b35d (arm64: mm: extend linear region for 52-bit VA configurations) which is way to intrusive
 7f34b43e07cb512b28543fdcb9f35d1fbfda9ebc # Fixes clang warning
+ad2c302bc6049c56c85cc2b64a0b4bd8e7ffdc56 # kernel-doc warning
