Revert "iommu/vt-d: Fix possible recursive locking in intel_iommu_init()" (iommu bug).

--- a/series.conf
+++ b/series.conf
@@ -2252,6 +2252,7 @@
 	# to area specific sections below.
 	########################################################
 	patches.suse/vduse-prevent-uninitialized-memory-accesses.patch
+	patches.suse/Revert-iommu-vt-d-Fix-possible-recursive-locking-in-.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
