sfc: Copy a subset of mcdi_pcol.h to siena (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -12650,6 +12650,7 @@
 	patches.suse/ath10k-skip-ath10k_halt-during-suspend-for-driver-st.patch
 	patches.suse/carl9170-tx-fix-an-incorrect-use-of-list-iterator.patch
 	patches.suse/sfc-Disable-Siena-support.patch
+	patches.suse/sfc-Copy-a-subset-of-mcdi_pcol.h-to-siena.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
