batman-adv: use eth_hw_addr_set() instead of ether_addr_copy() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5609,6 +5609,7 @@
 	patches.suse/batman-adv-prepare-for-const-netdev-dev_addr.patch
 	patches.suse/mac802154-use-dev_addr_set.patch
 	patches.suse/mac802154-use-dev_addr_set-manual.patch
+	patches.suse/batman-adv-use-eth_hw_addr_set-instead-of-ether_addr.patch
 	patches.suse/net-enetc-unmap-DMA-in-enetc_send_cmd.patch
 	patches.suse/phy-micrel-ksz8041nl-do-not-use-power-down-mode.patch
 	patches.suse/ice-Add-infrastructure-for-mqprio-support-via-ndo_se.patch
