sfc: Unsplit literal string (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -13969,6 +13969,7 @@
 	patches.suse/sfc-Encapsulate-access-to-netdev_priv.patch
 	patches.suse/sfc-Separate-efx_nic-memory-from-net_device-memory.patch
 	patches.suse/sfc-Move-EF100-efx_nic_type-structs-to-the-end-of-th.patch
+	patches.suse/sfc-Unsplit-literal-string.patch
 	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
 	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
