ethernet: sis190: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5580,6 +5580,7 @@
 	patches.suse/ethernet-netxen-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-r8169-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-rocker-use-eth_hw_addr_set.patch
+	patches.suse/ethernet-sis190-use-eth_hw_addr_set.patch
 	patches.suse/e1000e-Remove-redundant-statement.patch
 	patches.suse/net-sched-Allow-statistics-reads-from-softirq.patch
 	patches.suse/ethernet-Remove-redundant-statement.patch
