tulip: fix setting device address from rom (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5458,6 +5458,7 @@
 	patches.suse/ice-ndo_setup_tc-implementation-for-PR.patch
 	patches.suse/net-neigh-Fix-NTF_EXT_LEARNED-in-combination-with-NT.patch
 	patches.suse/net-neigh-Enable-state-migration-between-NUD_PERMANE.patch
+	patches.suse/tulip-fix-setting-device-address-from-rom.patch
 	patches.suse/net-hns3-debugfs-add-support-dumping-page-pool-info.patch
 	patches.suse/devlink-Reduce-struct-devlink-exposure.patch
 	patches.suse/devlink-Move-netdev_to_devlink-helpers-to-devlink.c.patch
