sk_buff: avoid potentially clearing 'slow_gro' field (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -725,6 +725,7 @@
 	patches.suse/skbuff-allow-slow_gro-for-skb-carring-sock-reference.patch
 	patches.suse/qed-Remove-the-qed-module-version.patch
 	patches.suse/qede-Remove-the-qede-module-version.patch
+	patches.suse/sk_buff-avoid-potentially-clearing-slow_gro-field.patch
 	patches.suse/devlink-Break-parameter-notification-sequence-to-be-.patch
 	patches.suse/devlink-Allocate-devlink-directly-in-requested-net-n.patch
 	patches.suse/bpf-Add-ambient-BPF-runtime-context-stored-in-curren.patch
