net/mlx5e: don't write directly to netdev->dev_addr (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5734,6 +5734,7 @@
 	patches.suse/net-qed_ptp-fix-check-of-true-rc-expression.patch
 	patches.suse/net-qed_dev-fix-check-of-true-rc-expression.patch
 	patches.suse/tcp-don-t-free-a-FIN-sk_buff-in-tcp_remove_empty_skb.patch
+	patches.suse/net-mlx5e-don-t-write-directly-to-netdev-dev_addr.patch
 	patches.suse/net-mlx5-Remove-unnecessary-checks-for-slow-path-fla.patch
 	patches.suse/net-mlx5-Fix-unused-function-warning-of-mlx5i_flow_t.patch
 	patches.suse/net-mlx5-Reduce-flow-counters-bulk-query-buffer-size.patch
