net: use dev_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5425,6 +5425,7 @@
 	patches.suse/ethernet-tg3-remove-direct-netdev-dev_addr-writes.patch
 	patches.suse/ethernet-tulip-remove-direct-netdev-dev_addr-writes.patch
 	patches.suse/ethernet-sun-remove-direct-netdev-dev_addr-writes.patch
+	patches.suse/net-use-dev_addr_set.patch
 	patches.suse/ionic-add-filterlist-to-debugfs.patch
 	patches.suse/ionic-move-lif-mac-address-functions.patch
 	patches.suse/ionic-remove-mac-overflow-flags.patch
