sysctl: move some boundary constants from sysctl.c to sysctl_vals (jsc#PED-1506).

--- a/series.conf
+++ b/series.conf
@@ -9561,6 +9561,7 @@
 	patches.suse/cifs-cifs_ses_mark_for_reconnect-should-also-update-reconnect-bits.patch
 	patches.suse/smb3-send-NTLMSSP-version-information.patch
 	patches.suse/cifs-update-internal-module-number.patch
+	patches.suse/sysctl-move-some-boundary-constants-from-sysctl.c-to.patch
 	patches.suse/0001-zsmalloc-introduce-some-helper-functions.patch
 	patches.suse/0002-zsmalloc-rename-zs_stat_type-to-class_stat_type.patch
 	patches.suse/0003-zsmalloc-decouple-class-actions-from-zspage-works.patch
