net: atm: use address setting helpers (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5712,6 +5712,7 @@
 	patches.suse/net-hsr-get-ready-for-const-netdev-dev_addr.patch
 	patches.suse/net-caif-get-ready-for-const-netdev-dev_addr.patch
 	patches.suse/net-drivers-get-ready-for-const-netdev-dev_addr.patch
+	patches.suse/net-atm-use-address-setting-helpers.patch
 	patches.suse/can-bittiming-can_fixup_bittiming-change-type-of-tse.patch
 	patches.suse/net-dsa-avoid-refcount-warnings-when-port_-fdb-mdb-_.patch
 	patches.suse/net-hns3-add-debugfs-support-for-interrupt-coalesce.patch
