tools: sync uapi/linux/if_link.h header (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -7515,6 +7515,7 @@
 	patches.suse/net-chelsio-cxgb4vf-Fix-an-error-code-in-cxgb4vf_pci.patch
 	patches.suse/net-usb-Correct-PHY-handling-of-smsc95xx.patch
 	patches.suse/net-marvell-mvpp2-increase-MTU-limit-when-XDP-enable.patch
+	patches.suse/tools-sync-uapi-linux-if_link.h-header.patch
 	patches.suse/lan743x-fix-deadlock-in-lan743x_phy_link_status_chan.patch
 	patches.suse/net-phylink-Force-link-down-and-retrigger-resolve-on.patch
 	patches.suse/net-phylink-Force-retrigger-in-case-of-latched-link-.patch
