skb_expand_head() adjust skb->truesize incorrectly (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -4514,6 +4514,7 @@
 	patches.suse/spi-spl022-fix-Microwire-full-duplex-mode.patch
 	patches.suse/mac80211-mesh-fix-HE-operation-element-length-check.patch
 	patches.suse/cfg80211-scan-fix-RCU-in-cfg80211_add_nontrans_list.patch
+	patches.suse/skb_expand_head-adjust-skb-truesize-incorrectly.patch
 	patches.suse/sctp-use-init_tag-from-inithdr-for-ABORT-chunk.patch
 	patches.suse/sctp-fix-the-processing-for-INIT-chunk.patch
 	patches.suse/sctp-fix-the-processing-for-INIT_ACK-chunk.patch
