ethernet: manually convert memcpy(dev_addr,..., sizeof(addr)) (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5483,6 +5483,7 @@
 	patches.suse/ethernet-constify-references-to-netdev-dev_addr-in-d.patch
 	patches.suse/ethernet-make-eth_hw_addr_random-use-dev_addr_set.patch
 	patches.suse/ethernet-make-use-of-eth_hw_addr_random-where-approp.patch
+	patches.suse/ethernet-manually-convert-memcpy-dev_addr-.-sizeof-a.patch
 	patches.suse/net-phy-micrel-make-skew-ps-check-more-lenient.patch
 	patches.suse/msft-hv-2454-hv_netvsc-Add-comment-of-netvsc_xdp_xmit.patch
 	patches.suse/net-fealnx-fix-build-for-UML.patch
